# kbang

./: CMakeLists.txt  kbang.pro  kbang_client.pro  kbang_common.pro  kbang_server.pro
src/client/: card.cpp  cardlistwidget.h  chatwidget - save.cpp  chatwidget.cpp  chatwidget.h  chatwidget.ui  chatwidget.ui.1.ui  chatwidget.ui.orig.ui  game.h  joingamedialog.cpp  kbang-client.xml  localplayerwidget.h  localplayerwidget.ui  main.cpp  mainwindow.cpp  opponentwidget.ui
src/common/: config.h  filelist.txt
src/common/parser/: parserstructs.cpp
src/server/: gameserver.cpp  gametable.cpp  voidai.cpp
src/servertester/: servertester.cpp
